# clone_rpg

./: .gitignore  CLASS_DIAGRAM.md  CMakeLists.txt  readme.md
src/: main.cpp
src/Battle/: BattleManager.cpp  BattleManager.h
src/Common/: GameState.h
src/GameManager/: GameManager.cpp  GameManager.h  jobsToDo.txt  story.json
src/Gold/: Gold.cpp  Gold.h
src/Items/: Accessory.h  Armor.cpp  Armor.h  Equipment.cpp  Equipment.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  Items.json  Potion.h  Weapon.h
src/Items/Armor/: Armor.cpp  Armor.h
src/Items/Weapon/: Weapon.cpp  Weapon.h
src/Shop/: Shop.cpp  Shop.h
src/Story/: StoryManager.cpp  StoryManager.h
src/character/: Character.cpp  Character.h  Inventory.h  Mage.cpp  Mage.h  Warrior.cpp  Warrior.h  warrior.cpp  warrior.h
src/game manager/: GameManager.cpp  GameManager.h  MenuItem.h
src/gameManager/: GameManager.cpp  GameManager.h  story.json
src/mob/: Goblin.h  Mob.cpp  Mob.h  MobFactory.cpp  MobFactory.h  mobs.json
src/skills/: Skill.cpp  Skill.h  skills.json
src/stats/: HP.cpp  HP.h  Hp.cpp  Hp.h  StatBlock.h  hitpointtypes.h  hp.cpp  hp.h  statBlock.h  statblock.h
